test/neg/neg-global_ptr1.cpp
#include <upcxx/upcxx.hpp>

int main() {
  upcxx::init();

  upcxx::global_ptr<volatile int> gp;
  
  upcxx::finalize();
}
